checker/tests/parsing/errors/struct_unclosed.mft
type T {
  f: Base { a, b ;
}
=== error ===
Unrecognized token `;` found at 26:27
Expected one of ",", ":", "@" or "}"